<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>elite_arm_driver</name>
  <version>0.1.0</version>
  <description>TODO: Package description</description>
  <maintainer email="padhupradheep@gmail.com">Pradheep Padmanabhan</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>elite_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>transforms3d</exec_depend>
  <exec_depend>elite_description</exec_depend>
  

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
