<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>elite_gazebo</name>
  <version>0.1.0</version>
  <description>The elite_gazebo package for simulation and real implementation of elite manipulator arms</description>
  <maintainer email="adarshkaran01@gmail.com">adarsh</maintainer>
  <license>MIT</license>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>rviz-visual-tools</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
