<?xml version="1.0"?>
<package format="3">
  <name>elite_msgs</name>
  <version>0.0.0</version>
  <description>The elite_msgs package</description>

  <maintainer email="mzebra@todo.todo">mzebra</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
     <build_type>ament_cmake</build_type>
  </export>
</package>
